# imagedataset2vec

./: .gitignore  architecture_recommendation.ipynb  densenet.ipynb  final_evaluations.ipynb  make_base_recommendations.ipynb  make_meta_features.ipynb  mean_centroids.pkl  mnasnet.ipynb  mobilenet.ipynb  pyproject.toml  recommendations.csv  recommendations.ipynb  resnet.ipynb  resnext.ipynb  shufflenet.ipynb  squeezenet.ipynb  wrn.ipynb
data/: tasks_indexes.pkl
data/base_recommendations/: gt.pkl  handcraft_knn.pkl  handcraft_rf.pkl  oner.pkl  random.pkl
data/meta_features/densenet/: airplane-automobile.pkl  airplane-bird.pkl  airplane-cat.pkl  airplane-deer.pkl  airplane-dog.pkl  airplane-frog.pkl  airplane-horse.pkl  airplane-ship.pkl  airplane-truck.pkl  automobile-bird.pkl  automobile-cat.pkl  automobile-deer.pkl  automobile-dog.pkl  automobile-frog.pkl  automobile-horse.pkl  automobile-ship.pkl  automobile-truck.pkl  bird-cat.pkl  bird-deer.pkl  bird-dog.pkl  bird-frog.pkl  bird-horse.pkl  bird-ship.pkl  bird-truck.pkl  cat-deer.pkl  cat-dog.pkl  cat-frog.pkl  cat-horse.pkl  cat-ship.pkl  cat-truck.pkl  deer-dog.pkl  deer-frog.pkl  deer-horse.pkl  deer-ship.pkl  deer-truck.pkl  dog-frog.pkl  dog-horse.pkl  dog-ship.pkl  dog-truck.pkl  frog-horse.pkl  (+5 more)
data/meta_features/handcraft/: airplane-automobile.pkl  airplane-bird.pkl  airplane-cat.pkl  airplane-deer.pkl  airplane-dog.pkl  airplane-frog.pkl  airplane-horse.pkl  airplane-ship.pkl  airplane-truck.pkl  (+36 more)
final_evaluation/: recommendations.ipynb
handcraft/: recommendations.ipynb
wrn50/: recommendations.ipynb
(+315 files in other folders)
