[tool.poetry]
name = "algorithm-recommendation"
version = "0.1.0"
description = ""
authors = ["Lucas Valentim <lucasvalentimdias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "=0.25.3"
numpy = "=1.17.4"
scipy = "=1.3.3"
scikit-learn = "=0.22"

[tool.poetry.dev-dependencies]
jupyter = "=1.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
