[tool.poetry]
name = "meta-learning"
version = "0.1.0"
description = ""
authors = ["Lucas Valentim <lucasvalentimdias@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
numpy = "^1.18"
pandas = "^1.0"
matplotlib = "^3.2"
seaborn = "^0.10.0"
scipy = "^1.4"
scikit-learn = "^0.22.2"
scikit-criteria = "^0.2.10"
humanize = "^2.2"
orange3 = "^3.24"
scikit-posthocs = "^0.6.4"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
